--- a/new_tour_template_elements.html
+++ b/new_tour_template_elements.html
@@ -1,7 +1,7 @@
 <? include( "/home/pilgrima/www/register/copysource/web_config.php" ); ?>
 <? include( "/home/pilgrima/www/register/copysource/functions_website.php" ); ?>
 <? include( "/home/pilgrima/www/register/components/functions.php" ); ?>
-<? $TOUR_ID = "HA071618" $TOUR_INFO = get_tour_info_responsive($TOUR_ID); ?>
+<? $TOUR_ID = "HA071618"; $TOUR_INFO = get_tour_info_responsive($TOUR_ID); ?>
 
 <!DOCTYPE html>
 <html lang="en">
