--- a/margin_add_tour.html
+++ b/margin_add_tour.html
@@ -17,3 +17,29 @@
 
     }
 </style>
+
+
+<style>
+    @media(min-width:768px){
+        .form-block > div{
+            min-height: 760px !important;
+        }
+
+    }@media(min-width:1024px){
+        .form-block > div{
+            min-height: 630px !important;
+        }
+
+    }
+    @media(min-width:1280px){
+        .form-block > div{
+            min-height: 710px !important;
+        }
+
+    }@media(min-width:1481px){
+        .form-block > div{
+            min-height: 590px !important;
+        }
+
+    }
+</style>
